[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
chrono = "0.4.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "macros", "tokio", "ping"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
