[package]
name = "blockchain"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.35"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "gossipsub", "mdns", "macros", "tokio", "ping", "request-response", "cbor"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rand = "0.8"
hex = "0.4"
fn-dsa = "0.3.0"
sha2 = "0.10.9"
num-bigint = "0.4"
num-traits = "0.2"
